samples/_failures_safe/1761494126_0b63bb_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_64af23ca.c: In function ‘main’:
./samples/SAFE/__tmp_64af23ca.c:172:39: error: expected ‘)’ at end of input
  172 |     process_tokens(tokens, token_count
      |                   ~                   ^
      |                                       )
./samples/SAFE/__tmp_64af23ca.c:172:5: error: expected declaration or statement at end of input
  172 |     process_tokens(tokens, token_count
      |     ^~~~~~~~~~~~~~
